Complete dentist management phase